# sdl3_wrapper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
cmake/: sdl3_wrapperConfig.cmake.in
include/: util.h
include/sdl3_wrapper/: event.h  gpu.h  init.h  iostream.h  stdinc.h  video.h
include/video/: Window.h
src/sdl3_wrapper/: gpu.cpp  init.cpp  iostream.cpp  stdinc.cpp  video.cpp
